# rust-chess

./: Cargo.toml
.devcontainer/: devcontainer.json
old/: board.rs  main.rs  pieces.rs
old/also_old/: board.rs  data.rs  main.rs
src/: bitboard.rs  bitmove.rs  board.rs  data.rs  defs.rs  evaluate.rs  fen.rs  main.rs  misc.rs  movegen.rs  movelist.rs  perft.rs  pieces.rs  sq.rs  uci.rs  validate.rs
src/board/: fen.rs  game_state.rs  history.rs  make_move.rs  utils.rs  zobrist.rs
src/extra/: magic.rs
src/movegen/: bit_move.rs  castle.rs  init.rs  king.rs  knights.rs  magics.rs  make_move.rs  pawns.rs  slide.rs
tscp/: main.c
vice/: bitboards.rs  board.rs  data.rs  init.rs  macros.rs  main.rs  movegen.rs
