[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
multiarray = "0.1.0"
ndarray = "0.15.6"
once_cell = "1.17.1"
rand = "0.8.5"
if_chain = "1.0.2"
rand_chacha = "0.3.1"